Applications/v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      serviceAccountName: myapp-account
      containers:
        - name: myapp
          image: docker.io/khabdrick/quotes:v1
          resources:
            requests:
              cpu: "100m" # Requests 100 milliCPUs
              memory: "256Mi"
            limits:
              cpu: "200m" # Limits the CPU usage to 200 milliCPUs
              memory: "512Mi"
          ports:
            - containerPort: 8000
---
